Fix overflow in comm-panel

--- a/apps/chat/web/styles/society-pro-chat.css
+++ b/apps/chat/web/styles/society-pro-chat.css
@@ -74,6 +74,7 @@ collection {
   margin: 20px 8px 20px 16px;
   border-radius: 2px;
   padding-bottom: 20px;
+  overflow: auto;
 }
 .sopro-channel-title{
   height: 32px;
